# voice-assistant

./: .gitignore  CLAUDE.md  PROJECT_VISION.md  README.md  docker-compose.yml
agent/: .env.example  Dockerfile  agent.py  pyproject.toml  requirements.txt
agent/plugins/: __init__.py
agent/plugins/tools/: __init__.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/memory/: route.ts
frontend/src/app/api/voice/: route.ts
frontend/src/app/api/voice-chat/: route.ts
frontend/src/components/auth/: email-auth-form.tsx  social-auth-button.tsx
frontend/src/components/chat/: chat-container.tsx  chat-input.tsx  conversation-sidebar.tsx  index.ts  message-bubble.tsx  message-list.tsx
frontend/src/components/dashboard/: dashboard-nav.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx
frontend/src/components/voice/: index.ts  voice-button.tsx  voice-recorder.tsx  voice-room.tsx
frontend/src/hooks/: use-audio-recorder.ts  use-voice-assistant.ts  use-web-speech.ts
frontend/src/lib/: deepgram.ts  mem0.ts  memory.ts  qdrant.ts  tools.ts  utils.ts
frontend/src/lib/supabase/: middleware.ts
frontend/src/stores/: chat-store.ts
frontend/src/types/: chat.ts  database.ts
frontend/supabase/: schema.sql
(+5 files in other folders)
